# ultimate-notion

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  ultimate-notion.code-workspace  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  config.env  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build-dev-docs.yml  build-docs.yml  build-publish.yml  build-rel-docs.yml  build-release-docs.yml  check-latest-release.yml  cvr-rewrite.yml  publish-pkg.yml  run-tests.yml
0.0/: index.html  sitemap.xml
0.0/authors/: index.html
0.0/search/: search_index.json
0.1/: 404.html  index.html  sitemap.xml
0.1/authors/: index.html
0.1/changelog/: index.html
0.1/contributing/: index.html
0.1/license/: index.html
0.10/: 404.html  index.html  sitemap.xml
0.10/authors/: index.html
0.10/changelog/: index.html
0.10/contributing/: index.html
0.10/features/: index.html
0.10/license/: index.html
0.10/overrides/: main.html
0.10/scripts/: set_release_version.py
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/authors/: index.html
0.2/changelog/: index.html
0.2/contributing/: index.html
0.2/features/: index.html
0.2/license/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/authors/: index.html
0.3/changelog/: index.html
0.3/contributing/: index.html
0.3/features/: index.html
0.3/license/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  sitemap.xml
0.4/authors/: index.html
0.4/changelog/: index.html
0.4/contributing/: index.html
0.4/features/: index.html
0.4/license/: index.html
0.5/: 404.html  index.html  sitemap.xml
0.5/authors/: index.html
0.5/changelog/: index.html
0.5/contributing/: index.html
0.5/features/: index.html
0.5/license/: index.html
0.5/search/: search_index.json
0.6/: 404.html  index.html  sitemap.xml
0.6/authors/: index.html
0.6/changelog/: index.html
0.6/contributing/: index.html
0.6/features/: index.html
0.6/license/: index.html
0.6/snippets/: links.txt
0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.7/authors/: index.html
0.7/changelog/: index.html
0.7/contributing/: index.html
0.7/features/: index.html
0.7/license/: index.html
0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.8/authors/: index.html
0.8/changelog/: index.html
0.8/contributing/: index.html
0.8/features/: index.html
0.8/license/: index.html
0.8/snippets/: links.txt
0.9/: 404.html  index.html  objects.inv  sitemap.xml
0.9/authors/: index.html
0.9/changelog/: index.html
0.9/contributing/: index.html
0.9/features/: index.html
0.9/license/: index.html
0.9/scripts/: copy_social_card.py  gen_ref_nav.py
0.9/search/: search_index.json
0.9/snippets/: links.txt
dev/: 404.html  gen_ref_nav.py  index.html  objects.inv  sitemap.xml
dev/authors/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/features/: index.html
dev/getting_started/: index.html
dev/license/: index.html
dev/reference/: index.html
dev/scripts/: copy_social_card.py  gen_ref_nav.py
dev/search/: search_index.json
dev/snippets/: links.txt
dev/terminology/: index.html
docs/: authors.md  conf.py  contributing.md  features.md  getting_started.md  index.md  license.md  terminology.md  workspace-neutral-tests.md
docs/examples/: create_database.md  file_upload.md  getting_started.md  google_tasks.md  notion_session.md  simple_taskdb.md  sync_google_tasks.md  task_list.md
docs/overrides/: main.html
docs/scripts/: gen_ref_nav.py
docs/snippets/: links.txt
docs/usage/: cli.md  configuration.md  db_advanced.md  db_crud.md  db_data_model.md  db_introduction.md  db_querying.md  file_upload.md  getting_started.md  page_advanced.md  page_introduction.md
examples/: .ruff.toml  file_upload.py  getting_started.py  google_tasks.py  simple_taskdb.py  sync_google_tasks.py
issues/: issue188.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/authors/: index.html
latest/changelog/: index.html
latest/contributing/: index.html
latest/features/: index.html
latest/license/: index.html
latest/reference/: index.html
latest/scripts/: gen_ref_nav.py
latest/search/: search_index.json
latest/snippets/: links.txt
notebooks/: .gitignore  getting_started.ipynb  template.ipynb
scripts/: bootstrap_test_workspace.py  train_model.py
src/ultimate_notion/: __init__.py  blocks.py  cli.py  comment.py  config.py  core.py  database.py  deprecated.py  emoji.py  errors.py  file.py  functions.py  markdown.py  objects.py  option.py  page.py  parser.py  props.py  query.py  record.py  rich_text.py  schema.py  session.py  sync.py  text.py  user.py  utils.py  view.py
tests/: TEST_WORKSPACE.md  __init__.py  conftest.py  dormouse.html  test_blocks.py  test_cli.py  test_comment.py  test_config.py  test_core.py  test_csv_parser.py  test_database.py  test_docs_py_snippets.py  test_dummy.py  test_examples.py  test_file.py  test_html_parser.py  test_init.py  test_iterators.py  test_lastest_release.py  test_latest_release.py  test_markdown.py  test_objects.py  test_option.py  test_orm.py  test_page.py  test_props.py  test_query.py  test_records.py  test_rich_text.py  test_schema.py  test_session.py  test_templates.py  test_text.py  test_types.py  test_user.py  test_utils.py  test_vcr_normalization.py  test_view.py  utils.py
tests/adapters/: test_config.py
tests/cassettes/: test_change_model_title.yaml  test_create_block.yaml  test_create_database.yaml  test_create_empty_page.yaml  test_create_simple_page.yaml  test_delete_block.yaml  test_get_db.yaml  test_iterate_page_blocks.yaml  test_missing_property.yaml  test_orm_icon.yaml  test_orm_query.yaml  (+12 more)
(+886 files in other folders)
