[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

####################
# Project Metadata #
####################

[project]
name = "ultimate-notion"
description = "The ultimate Python client for Notion!"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["notion", "notion client"]
authors = [
    { name = "Florian Wilhelm", email = "Florian.Wilhelm@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "notion-client~=2.2",
    "tabulate>=0.9",
    "numpy~=1.24",
    "emoji~=2.8",
    "pandas~=2.0",
    "pydantic~=2.0",
    "mistune~=3.0",  # markdown parser
]
dynamic = ["version"]

[project.optional-dependencies]
google = [
   "google-api-python-client",
   "google-auth-httplib2",
   "google-auth-oauthlib",
]
all = ["ultimate-notion[google]"]

[project.urls]
Documentation = "https://ultimate-notion.com/"
Sponsor = "https://github.com/sponsors/FlorianWilhelm"
Tracker = "https://github.com/ultimate-notion/ultimate-notion/issues"
Source = "https://github.com/ultimate-notion/ultimate-notion"

######################
# Build & Versioning #
######################

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/ultimate_notion/_version.py"

[tool.hatch.build]
packages = ["src/ultimate_notion"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

##################
# External Tools #
##################

[tool.mypy]
files = ["src/ultimate_notion", "tests", "examples"]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-glob='*.md'"
testpaths = [
    "tests",
]
markers = [
    "webtest: tests that use the Notion web API"
]
env_files = [
    ".vscode/.env"
]

[tool.coverage.run]
branch = true
source = ["src/ultimate_notion"]
omit = [
  "_version.py",  # automatically created by hatch-vcs, not in repo
]


[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
include = [
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
    "examples/**/*.py",
    "docs/**/*.py"
]

[tool.ruff.lint]
preview = true
extend-select = [ # features in preview
    "W292", # missing-newline-at-end-of-file
]
select = [
    "A",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT", # Boolean trap
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q", # quotes, e.g. single quotes
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
    "RUF100", # Automatically remove unused # noqa directives
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    "PLC1901", # empty string comparisons
    "PLW2901", # `for` loop variable overwritten
    "SIM114", # Combine `if` branches using logical `or` operator
    "E203", # Whitespace before :, needed for black compatability and also `ruff format`
    "ISC001", # causes unexpected behaviour with formatter
    "PLR0904", # ignore more than 20 public methods warning
]
unfixable = [
    # "F401",  # Don't touch unused imports
]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.isort]
known-first-party = ["ultimate_notion"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Allow print/pprint
"examples/*" = ["T201"]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]


###########################
# Hatch Environment Setup #
###########################

# Default environment
[tool.hatch.envs.default]
type = "virtual"
python = "3.10"
post-install-commands = ["pre-commit install"]
features = ["all"]
dependencies = [
    "coverage[toml]>=6.2",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-recording",
    "pytest-dotenv",
    "pytest-sugar",
    "hypothesis",
    "jupyterlab",
    "pre-commit",
    "ipython",
    "mktestdocs",
    "packaging",
    "matplotlib",
    "vcrpy>=2.0.1", # also required by pytest-recording
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/ultimate_notion --cov=tests --record-mode once {args}"
debug =  "test --no-cov -s --pdb --pdbcls=IPython.core.debugger:Pdb {args}"
vcr-off = "test --disable-recording {args}"
vcr-only = "test --record-mode none --block-network {args}"
vcr-rewrite = "test --record-mode=rewrite {args}"
vcr-rewrite-fixtures = ["vcr-rewrite --overwrite-fixtures {args}"]
vcr-drop-cassettes = "find ./tests -type d -name 'cassettes' -exec rm -rf {{}} +"
ci = "vcr-only --cov-report lcov {args}"
doctest = "pytest docs/examples/"
md2py = "python -c \"from ultimate_notion.utils import convert_md_to_py; convert_md_to_py('{args}')\""

# Docs environment
[tool.hatch.envs.docs]
dependencies = [
    "mkdocs~=1.5.3",
    "mkdocs-material~=9.4.12",
    # Plugins
    "mkdocs-include-markdown-plugin",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-minify-plugin~=0.7.1",
    "mkdocs-section-index",
    "mkdocs-git-revision-date-localized-plugin~=1.1.0",
    "mkdocstrings[python]",
    "mkdocs-redirects~=1.2.1",
    "mkdocs-glightbox~=0.3.0",
    "mike~=2.0.0",
    # Extensions
    "pymdown-extensions~=10.5.0",
    # Necessary for syntax highlighting in code blocks
    "pygments~=2.17.2",
    # Validation
    "linkchecker~=10.3.0",
    ]
[tool.hatch.envs.docs.env-vars]
SOURCE_DATE_EPOCH = "1580601600"
PYTHONUNBUFFERED = "1"
MKDOCS_CONFIG = "mkdocs.yml"
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --config-file {env:MKDOCS_CONFIG} --clean --strict {args}"
serve = "mkdocs serve --config-file {env:MKDOCS_CONFIG} --dev-addr localhost:8000 {args}"
ci-build = "mike deploy --config-file {env:MKDOCS_CONFIG} --update-aliases {args}"
# --ignore-url=None since the SUMMARY.md file leaves a <toc>None</toc> in sitemap.xml
validate = "linkchecker --config .linkcheckerrc --ignore-url=/reference --ignore-url=None site"
# https://github.com/linkchecker/linkchecker/issues/678
build-check = [
    "build",
    "validate",
]

# Lint environment
[tool.hatch.envs.lint]
# skip-install = true # mypy gives more feedback if project is installed locally, strange but true
dependencies = [
    "mypy~=1.8.0",
    "ruff==0.1.14",
]
[tool.hatch.envs.lint.scripts]
typing = [
    "echo \"VERSION: `mypy --version`\"",
    "mypy --install-types --non-interactive {args}"
]
style = [
    "echo \"VERSION: `ruff --version`\"",
    "ruff {args:.}",
    "ruff format --check {args:.}",
]
fix = [
    "ruff format {args:.}",
    "ruff --fix {args:.}",
    "style",  # feedback on what is not fixable
]
all = [
    "style",
    "typing",
]
